# AI-TOOLBOX

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: .gitignore
src/ai_toolbox/: __init__.py  main.py
tests/: .gitignore  __init__.py  test_main.py
