[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_toolbox"
version = "0.1.0"
description = "A short description of your library"
authors = [{name = "George Ghira", email = "georgeghira@yahoo.com"}]
license = {text = "MIT"}
dependencies = [
    "click==8.2.1"
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/georgeghira/ai-toolbox"

[project.scripts]
ai_toolbox = "ai_toolbox.main:cli"

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-mock==3.14.1"
]

